refreshed some functions and setup pkg for expansion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,14 @@
 
 export(wp_about_me)
 export(wp_auth)
-export(wp_get_my_posts)
+export(wp_get_posts)
 export(wp_post_stats)
 export(wp_site_info)
 export(wp_site_stats)
 import(anytime)
 import(crayon)
 import(httr)
+import(progress)
 import(purrr)
 import(stringi)
-importFrom(tibble,data_frame)
+importFrom(tibble,tibble)
