--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pressur
 Type: Package
 Title: Query and Orchestrate the 'WordPress' 'API'
-Version: 0.1.0
-Date: 2017-12-27
+Version: 0.2.0
+Date: 2020-06-28
 Authors@R: c(
     person("Bob", "Rudis", email = "bob@rud.is", role = c("aut", "cre"), 
            comment = c(ORCID = "0000-0001-5670-2640"))
@@ -14,18 +14,19 @@ Description: 'WordPress' has a fairly comprehensive 'API' <https://developer.wor
    with the 'WordPress' 'API' functions.
 URL: https://github.com/hrbrmstr/pressur
 BugReports: https://github.com/hrbrmstr/pressur/issues
-License: AGPL
+License: MIT + file LICENSE
 Encoding: UTF-8
 Suggests:
     testthat,
     covr
 Depends:
-    R (>= 3.2.0)
+    R (>= 3.6.0)
 Imports:
     purrr,
     httr,
     stringi,
     crayon,
     tibble,
-    anytime
-RoxygenNote: 6.0.1.9000
+    anytime,
+    progress
+RoxygenNote: 7.1.0
